--- a/homepage.html
+++ b/homepage.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Let Us Build Your Pc</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="pc_parts.html">PC Parts</a></li>
+                <li><a href="tips.html">Tips</a></li> <!-- Add Tips Page -->
                 <!-- Add other navigation links here if needed -->
             </ul>
         </nav>
