--- a/about-us.html
+++ b/about-us.html
@@ -11,8 +11,9 @@
         <h1>About Us</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="index.html">Let Us Build Youre pc</a></li>
+                <li><a href="homepage.html">HomePage</a></li>
+                <li><a href="tips.html">Tips</a></li> <!-- Add Tips Page -->
                 <!-- Add other navigation links here if needed -->
             </ul>
         </nav>
