--- a/tips.html
+++ b/tips.html
@@ -52,7 +52,7 @@
             <ul>
                 <li><strong>Choose the Right Case:</strong> Ensure your case has enough space for all components and good airflow.</li>
                 <li><strong>Check Compatibility:</strong> Use online tools or our tool to check if your selected components are compatible with each other.</li>
-                <li><strong>Install Windows from USB:</strong> It's faster and more convenient than using a CD/DVD.</li>
+                <li><strong>Install Windows from USB:</strong> It's faster and more convenient than using a CD/DVD(must be atleast 8GB).</li>
                 <li><strong>Don’t Forget Peripherals:</strong> Plan for your monitor, keyboard, mouse, and other peripherals that suit your needs.</li>
             </ul>
         </section>
