--- a/pc_peripherals.html
+++ b/pc_peripherals.html
@@ -283,10 +283,16 @@
                     const name = this.getAttribute('data-name');
                     const price = parseFloat(this.getAttribute('data-price'));
 
-                    // Add item to cart
-                    cartItems.push({ name, price });
-                    updateCart();
-                });
+                   button.addEventListener('click', function() {
+    console.log('Button clicked'); // Add this line
+    const name = this.getAttribute('data-name');
+    const price = parseFloat(this.getAttribute('data-price'));
+
+    // Add item to cart
+    cartItems.push({ name, price });
+    updateCart();
+});
+
             });
 
             document.getElementById('clear-cart').addEventListener('click', function() {
