--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,8 @@
                 <li><a href="index.html">Let Us Build Your Pc</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="pc_parts.html">PC Parts</a></li>
-                <li><a href="tips.html">Tips</a></li> <!-- Add Tips Page -->
+                <li><a href="tips.html">Tips</a></li><!-- Add Tips Page -->
+                 <li><a href="news.html">News</a></li>
                 <!-- Add other navigation links here if needed -->
             </ul>
         </nav>
