--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1>Tech News Daily</h1>
             <ul>
-                <li><a href="#">Home</a></li>
+               <a href="homepage.html">Home</a>
             </ul>
         </div>
     </header>
