--- a/news.html
+++ b/news.html
@@ -4,14 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMD Ryzen 9000 Series Launch - Pricing and Features</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #77aaff 3px solid;
+        }
+        header a {
+            color: #fff;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+        header ul {
+            padding: 0;
+            list-style: none;
+        }
+        header ul li {
+            float: right;
+            display: inline;
+            padding: 0 20px 0 20px;
+        }
+        header h1 {
+            float: left;
+            font-size: 24px;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        .main-content {
+            padding: 20px;
+            background: #fff;
+            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .main-content h2 {
+            color: #333;
+            text-transform: uppercase;
+        }
+        .main-content p {
+            line-height: 1.6;
+        }
+        .main-content img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px 0;
+        }
+        .main-content h3 {
+            color: #555;
+            margin-top: 30px;
+            margin-bottom: 10px;
+        }
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Tech News Daily</h1>
             <ul>
-               <a href="homepage.html">Home</a>
+                <li><a href="homepage.html">Home</a></li>
             </ul>
         </div>
     </header>
@@ -23,26 +94,5 @@
 
             <p>The flagship model, Ryzen 9 9950X, featuring 16 cores, is set to launch at $649—$50 less than its predecessor, the Ryzen 9 7950X. Other models in the lineup, including the Ryzen 7 9700X and Ryzen 5 9600X, will also see price reductions of $20 to $50 compared to equivalent Ryzen 7000 CPUs.</p>
 
-            <p>The launch of the Ryzen 9000 series was delayed to ensure quality control, but the wait is now over. The Ryzen 7 9700X ($359) and Ryzen 5 9600X ($279) will be available starting August 8th, followed by other models in the coming weeks.</p>
+            <p>The launch of the Ryzen 9000 series was delayed to ensure quality control, but the wait is now over. The Ryzen 7 9700X ($359) and Ryzen 5 
 
-            <h3>Benchmark Results</h3>
-            <p>Initial benchmarks show that the Ryzen 9 9950X offers a 15% performance boost over the 7950X in multi-threaded tasks, while the 9700X and 9600X also demonstrate noticeable improvements. The lower power consumption across the lineup has been a key highlight, further solidifying AMD's position in the energy-efficient processing market.</p>
-
-            <img src="ryzen-9000-series.jpg" alt="AMD Ryzen 9000 Series CPUs">
-
-            <h3>Ecosystem Impact</h3>
-            <p>With the introduction of the Ryzen 9000 series, AMD continues to strengthen its ecosystem, offering backward compatibility with AM5 motherboards and DDR5 memory, which is expected to drive broader adoption among gamers and professionals alike.</p>
-
-            <h3>Expert Opinions</h3>
-            <p>Industry experts have praised AMD's strategy, citing the balanced price-to-performance ratio as a key factor in its potential success. "AMD is clearly listening to its user base, delivering what enthusiasts and professionals need at a price point that's hard to ignore," said tech analyst Sarah Collins.</p>
-
-            <h3>Conclusion</h3>
-            <p>The Ryzen 9000 series is poised to be a game-changer in the CPU market, combining affordability with cutting-edge performance. With competitive pricing and robust features, AMD is setting a high bar for its competitors.</p>
-        </div>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 Tech News Daily. All rights reserved.</p>
-    </footer>
-</body>
-</html>
