--- a/news.html
+++ b/news.html
@@ -16,7 +16,6 @@
             width: 80%;
             margin: auto;
             overflow: hidden;
-            background: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
             padding: 20px;
             border-radius: 8px;
         }
@@ -52,13 +51,14 @@
         }
         .main-content {
             padding: 20px;
-            background: #fff;
+            background: #000; /* Black background */
+            color: #fff; /* White text */
             margin-top: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             border-radius: 8px;
         }
         .main-content h2 {
-            color: #333;
+            color: #fff; /* White color for headings */
             text-transform: uppercase;
         }
         .main-content p {
@@ -72,7 +72,7 @@
             margin: 20px 0;
         }
         .main-content h3 {
-            color: #555;
+            color: #ddd; /* Light grey color for subheadings */
             margin-top: 30px;
             margin-bottom: 10px;
         }
@@ -109,7 +109,7 @@
 
             <p>The launch of the Ryzen 9000 series was delayed to ensure that the chips met AMD's high standards for quality and performance. Despite the wait, the new processors are finally here, and they promise to deliver significant improvements over previous generations. The Ryzen 7 9700X, priced at $359, and the Ryzen 5 9600X, priced at $279, will be available for purchase starting August 8th, with pre-orders opening a week earlier.</p>
 
-            <img src="https://imageio.forbes.com/specials-images/imageserve/665c87507be5e72a912baf4b/AMD-Zen-5-CPUs-range-from-six-cores-to-16-cores/960x0.png?height=339&width=711&fit=bounds" alt="AMD Ryzen 9000 Series">
+            <img src="https://assets.hardwarezone.com/img/2024/05/Ryzen_9000_4.jpg" alt="AMD Ryzen 9000 Series">
 
             <h3>Benchmark Results and Performance Insights</h3>
             <p>The Ryzen 9 9950X has already been subjected to a series of benchmarks, and the results are impressive. Compared to the Ryzen 9 7950X, the 9950X shows a 15% increase in multi-threaded performance, making it a powerful choice for tasks that require significant computational power. This performance boost is achieved through architectural improvements and higher clock speeds, which contribute to faster processing and better efficiency.</p>
@@ -146,5 +146,3 @@
     </footer>
 </body>
 </html>
-
-
