--- a/news.html
+++ b/news.html
@@ -109,7 +109,7 @@
 
             <p>The launch of the Ryzen 9000 series was delayed to ensure that the chips met AMD's high standards for quality and performance. Despite the wait, the new processors are finally here, and they promise to deliver significant improvements over previous generations. The Ryzen 7 9700X, priced at $359, and the Ryzen 5 9600X, priced at $279, will be available for purchase starting August 8th, with pre-orders opening a week earlier.</p>
 
-            <img src="https://assets.hardwarezone.com/img/2024/05/Ryzen_9000_4.jpg" alt="AMD Ryzen 9000 Series">
+            <img src="https://www.amd.com/content/dam/amd/en/images/products/processors/ryzen/2613900-amd-ryzen-9000-series-processor-tile.jpg">
 
             <h3>Benchmark Results and Performance Insights</h3>
             <p>The Ryzen 9 9950X has already been subjected to a series of benchmarks, and the results are impressive. Compared to the Ryzen 9 7950X, the 9950X shows a 15% increase in multi-threaded performance, making it a powerful choice for tasks that require significant computational power. This performance boost is achieved through architectural improvements and higher clock speeds, which contribute to faster processing and better efficiency.</p>
