--- a/news.html
+++ b/news.html
@@ -91,9 +91,7 @@
             <h1>Tech News Daily</h1>
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Reviews</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about-us.html">About Us</a></li>
             </ul>
         </div>
     </header>
