--- a/news.html
+++ b/news.html
@@ -122,7 +122,9 @@
             <p>The Ryzen 7 9700X features 8 cores and 16 threads, with a base clock of 4.5 GHz and a boost clock of up to 5.4 GHz. This configuration makes it a great option for users who need strong performance for both gaming and productivity tasks. The support for DDR5 memory and PCIe 4.0 ensures that the processor can handle the latest technology and deliver fast data transfer speeds.</p>
 
             <p>The Ryzen 5 9600X, while positioned as a mid-range option, offers a base clock of 4.7 GHz and a boost clock of up to 5.3 GHz. With 6 cores and 12 threads, it is well-suited for gamers and users who need a powerful CPU without spending a fortune. The inclusion of DDR5 support further enhances its performance capabilities, making it a competitive option in its price range.</p>
-
+            
+            <img src=https://media.overclock3d.net/2024/06/Ryzen-9000-series-lineup.jpg">
+            
             <h3>Market Impact and Comparison</h3>
             <p>The launch of the Ryzen 9000 series is likely to have a significant impact on the CPU market. AMD’s aggressive pricing strategy, combined with the performance improvements of the new processors, positions the Ryzen 9000 series as a strong competitor to Intel’s offerings. This move could force Intel to reevaluate its pricing and performance strategies, potentially leading to more competitive products and better value for consumers.</p>
 
