--- a/cooling.html
+++ b/cooling.html
@@ -165,6 +165,34 @@
         <section id="cooling">
             <h2>Cooling Solutions</h2>
             
+
+            <!-- Thermal Paste -->
+<div class="cooling-category">
+    <h2>Thermal Paste</h2>
+    <div class="cooling-items">
+        <div class="cooling-item">
+            <img src="https://example.com/thermal-grizzly-kryonaut.png" alt="Thermal Grizzly Kryonaut">
+            <h3>Thermal Grizzly Kryonaut</h3>
+            <p>Type: Non-conductive | Thermal Conductivity: 12.5 W/mK | Features: High Performance</p>
+            <button class="add-to-cart" data-name="Thermal Grizzly Kryonaut" data-price="10.00">Add to Cart</button>
+        </div>
+        <div class="cooling-item">
+            <img src="https://example.com/arctic-mx-6.png" alt="Arctic MX-6">
+            <h3>Arctic MX-6</h3>
+            <p>Type: Non-conductive | Thermal Conductivity: 9.0 W/mK | Features: Easy to Apply</p>
+            <button class="add-to-cart" data-name="Arctic MX-6" data-price="10.00">Add to Cart</button>
+        </div>
+        <div class="cooling-item">
+            <img src="https://example.com/noctua-nt-h2.png" alt="Noctua NT-H2">
+            <h3>Noctua NT-H2</h3>
+            <p>Type: Non-conductive | Thermal Conductivity: High | Features: Long-lasting Performance</p>
+            <button class="add-to-cart" data-name="Noctua NT-H2" data-price="10.00">Add to Cart</button>
+        </div>
+    </div>
+</div>
+
+
+            
             <!-- Water Cooling -->
             <div class="cooling-category">
                 <h2>Water Cooling</h2>
