--- a/cooling.html
+++ b/cooling.html
@@ -171,19 +171,19 @@
     <h2>Thermal Paste</h2>
     <div class="cooling-items">
         <div class="cooling-item">
-            <img src="https://example.com/thermal-grizzly-kryonaut.png" alt="Thermal Grizzly Kryonaut">
+            <img src="https://m.media-amazon.com/images/I/61MPmVRKFcL.jpg" alt="Thermal Grizzly Kryonaut">
             <h3>Thermal Grizzly Kryonaut</h3>
             <p>Type: Non-conductive | Thermal Conductivity: 12.5 W/mK | Features: High Performance</p>
             <button class="add-to-cart" data-name="Thermal Grizzly Kryonaut" data-price="10.00">Add to Cart</button>
         </div>
         <div class="cooling-item">
-            <img src="https://example.com/arctic-mx-6.png" alt="Arctic MX-6">
+            <img src="https://www.arctic.de/media/9d/3c/98/1665052493/MX-6_4g_G00.png" alt="Arctic MX-6">
             <h3>Arctic MX-6</h3>
             <p>Type: Non-conductive | Thermal Conductivity: 9.0 W/mK | Features: Easy to Apply</p>
             <button class="add-to-cart" data-name="Arctic MX-6" data-price="10.00">Add to Cart</button>
         </div>
         <div class="cooling-item">
-            <img src="https://example.com/noctua-nt-h2.png" alt="Noctua NT-H2">
+            <img src="https://m.media-amazon.com/images/I/71GMxZ3DXzL._AC_UF1000,1000_QL80_.jpg" alt="Noctua NT-H2">
             <h3>Noctua NT-H2</h3>
             <p>Type: Non-conductive | Thermal Conductivity: High | Features: Long-lasting Performance</p>
             <button class="add-to-cart" data-name="Noctua NT-H2" data-price="10.00">Add to Cart</button>
