--- a/pc_peripherals.html
+++ b/pc_peripherals.html
@@ -260,6 +260,53 @@
                 </div>
             </div>
         </section>
+        <section id="printers">
+    <h2>Printers</h2>
+    <div class="peripheral-grid">
+        <div class="peripheral-item">
+            <img src="https://example.com/hp-envy-6055.png" alt="HP Envy 6055">
+            <h3>HP Envy 6055</h3>
+            <p>Wireless | Mobile Printing | All-in-One</p>
+            <button class="add-to-cart" data-name="HP Envy 6055" data-price="100.00">Add to Cart</button>
+        </div>
+        <div class="peripheral-item">
+            <img src="https://example.com/brother-hl-l2350dw.png" alt="Brother HL-L2350DW">
+            <h3>Brother HL-L2350DW</h3>
+            <p>Monochrome | Wireless | Duplex Printing</p>
+            <button class="add-to-cart" data-name="Brother HL-L2350DW" data-price="120.00">Add to Cart</button>
+        </div>
+        <div class="peripheral-item">
+            <img src="https://example.com/canon-pixma-mg3620.png" alt="Canon PIXMA MG3620">
+            <h3>Canon PIXMA MG3620</h3>
+            <p>Wireless | Mobile Printing | Compact Design</p>
+            <button class="add-to-cart" data-name="Canon PIXMA MG3620" data-price="80.00">Add to Cart</button>
+        </div>
+    </div>
+</section>
+<section id="headsets">
+    <h2>Headsets</h2>
+    <div class="peripheral-grid">
+        <div class="peripheral-item">
+            <img src="https://example.com/logitech-g-pro-x.png" alt="Logitech G Pro X">
+            <h3>Logitech G Pro X</h3>
+            <p>Type: Gaming | Features: 7.1 Surround Sound, Detachable Microphone</p>
+            <button class="add-to-cart" data-name="Logitech G Pro X" data-price="130.00">Add to Cart</button>
+        </div>
+        <div class="peripheral-item">
+            <img src="https://example.com/razer-nari-ultimate.png" alt="Razer Nari Ultimate">
+            <h3>Razer Nari Ultimate</h3>
+            <p>Type: Gaming | Features: Haptic Feedback, RGB Lighting</p>
+            <button class="add-to-cart" data-name="Razer Nari Ultimate" data-price="150.00">Add to Cart</button>
+        </div>
+        <div class="peripheral-item">
+            <img src="https://example.com/steelseries-arctis-7.png" alt="SteelSeries Arctis 7">
+            <h3>SteelSeries Arctis 7</h3>
+            <p>Type: Gaming | Features: Wireless, ClearCast Microphone</p>
+            <button class="add-to-cart" data-name="SteelSeries Arctis 7" data-price="170.00">Add to Cart</button>
+        </div>
+    </div>
+</section>
+
     </main>
     <aside class="cart" id="cart">
     <h2>Shopping Cart</h2>
