--- a/pc_parts.html
+++ b/pc_parts.html
@@ -25,7 +25,7 @@
                 <li><a href="storage.html">Storage</a></li>
                 <li><a href="psus.html">Power Supplies</a></li>
                 <li><a href="cases.html">Cases</a></li>
-                <li><a href="cooling.html">Coolers</a></li>
+                <li><a href="cooling.html">cooling</a></li>
                 <li><a href="pc_peripherals.html">Peripherals</a></li>
             </ul>
         </nav>
@@ -78,7 +78,7 @@
              <div class="category">
                 <a href="cooling.html">
                     <img src="https://www.datocms-assets.com/34299/1681856782-01_kraken-elite_white_rgb-core-fans_rgb_360.png" alt="Coolers">
-                    <h3>coolers</h3>
+                    <h3>cooling</h3>
                 </a>
             </div>
             <div class="category">
